// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Alert /> > Snapshots > should match snapshot with error type 1`] = `
<div>
  <div
    aria-hidden="false"
    class="Frame_height-mobile__iuzg895x Modal_modalWrapper__1txblt60 Modal_modalWrapper_active_true__1txblt61 Modal_modalWrapper_minimized_false__1txblt63 neodrag"
    role="dialog"
    style="--height-mobile__iuzg895u: 120; transform: translate3d(362px, 284px, 0); touch-action: none;"
  >
    <div
      class="Frame_marginBottom-mobile__iuzg8973 TitleBar_titleBarBackground__1kpzw682 TitleBar_titleBarBackground_active_true__1kpzw683 draggable"
      style="--marginBottom-mobile__iuzg8970: var(--r95-space-2);"
    >
      <div
        class="TitleBar_title__1kpzw685"
      >
        Error
      </div>
    </div>
    <div
      class="Modal_content__1txblt65 Alert_dialog__lcz1rw2"
    >
      <div
        class="Alert_icon__lcz1rw1"
      >
        <svg test-file-stub
          height="32"
          variant="32x32_4"
          width="32"
        />
      </div>
      <div
        class="Alert_message__lcz1rw0"
      >
        Error
      </div>
    </div>
    <div
      class="Frame_justifyContent-mobile__iuzg8949 Modal_buttonWrapper__1txblt64"
      style="--justifyContent-mobile__iuzg8946: center;"
    >
      <button
        class="Button_button__1bzq74l0"
        value="OK"
      >
        OK
      </button>
    </div>
  </div>
</div>
`;

exports[`<Alert /> > Snapshots > should match snapshot with info type 1`] = `
<div>
  <div
    aria-hidden="false"
    class="Frame_height-mobile__iuzg895x Modal_modalWrapper__1txblt60 Modal_modalWrapper_active_true__1txblt61 Modal_modalWrapper_minimized_false__1txblt63 neodrag"
    role="dialog"
    style="--height-mobile__iuzg895u: 120; transform: translate3d(362px, 284px, 0); touch-action: none;"
  >
    <div
      class="Frame_marginBottom-mobile__iuzg8973 TitleBar_titleBarBackground__1kpzw682 TitleBar_titleBarBackground_active_true__1kpzw683 draggable"
      style="--marginBottom-mobile__iuzg8970: var(--r95-space-2);"
    >
      <div
        class="TitleBar_title__1kpzw685"
      >
        Info
      </div>
    </div>
    <div
      class="Modal_content__1txblt65 Alert_dialog__lcz1rw2"
    >
      <div
        class="Alert_icon__lcz1rw1"
      >
        <svg test-file-stub
          height="32"
          variant="32x32_4"
          width="32"
        />
      </div>
      <div
        class="Alert_message__lcz1rw0"
      >
        Info
      </div>
    </div>
    <div
      class="Frame_justifyContent-mobile__iuzg8949 Modal_buttonWrapper__1txblt64"
      style="--justifyContent-mobile__iuzg8946: center;"
    >
      <button
        class="Button_button__1bzq74l0"
        value="OK"
      >
        OK
      </button>
    </div>
  </div>
</div>
`;

exports[`<Alert /> > Snapshots > should match snapshot with question type 1`] = `
<div>
  <div
    aria-hidden="false"
    class="Frame_height-mobile__iuzg895x Modal_modalWrapper__1txblt60 Modal_modalWrapper_active_true__1txblt61 Modal_modalWrapper_minimized_false__1txblt63 neodrag"
    role="dialog"
    style="--height-mobile__iuzg895u: 120; transform: translate3d(362px, 284px, 0); touch-action: none;"
  >
    <div
      class="Frame_marginBottom-mobile__iuzg8973 TitleBar_titleBarBackground__1kpzw682 TitleBar_titleBarBackground_active_true__1kpzw683 draggable"
      style="--marginBottom-mobile__iuzg8970: var(--r95-space-2);"
    >
      <div
        class="TitleBar_title__1kpzw685"
      >
        question
      </div>
    </div>
    <div
      class="Modal_content__1txblt65 Alert_dialog__lcz1rw2"
    >
      <div
        class="Alert_icon__lcz1rw1"
      >
        <svg test-file-stub
          height="32"
          variant="32x32_4"
          width="32"
        />
      </div>
      <div
        class="Alert_message__lcz1rw0"
      >
        question
      </div>
    </div>
    <div
      class="Frame_justifyContent-mobile__iuzg8949 Modal_buttonWrapper__1txblt64"
      style="--justifyContent-mobile__iuzg8946: center;"
    >
      <button
        class="Button_button__1bzq74l0"
        value="OK"
      >
        OK
      </button>
    </div>
  </div>
</div>
`;

exports[`<Alert /> > Snapshots > should match snapshot with warning type 1`] = `
<div>
  <div
    aria-hidden="false"
    class="Frame_height-mobile__iuzg895x Modal_modalWrapper__1txblt60 Modal_modalWrapper_active_true__1txblt61 Modal_modalWrapper_minimized_false__1txblt63 neodrag"
    role="dialog"
    style="--height-mobile__iuzg895u: 120; transform: translate3d(362px, 284px, 0); touch-action: none;"
  >
    <div
      class="Frame_marginBottom-mobile__iuzg8973 TitleBar_titleBarBackground__1kpzw682 TitleBar_titleBarBackground_active_true__1kpzw683 draggable"
      style="--marginBottom-mobile__iuzg8970: var(--r95-space-2);"
    >
      <div
        class="TitleBar_title__1kpzw685"
      >
        Warning
      </div>
    </div>
    <div
      class="Modal_content__1txblt65 Alert_dialog__lcz1rw2"
    >
      <div
        class="Alert_icon__lcz1rw1"
      >
        <svg test-file-stub
          height="32"
          variant="32x32_4"
          width="32"
        />
      </div>
      <div
        class="Alert_message__lcz1rw0"
      >
        Warning
      </div>
    </div>
    <div
      class="Frame_justifyContent-mobile__iuzg8949 Modal_buttonWrapper__1txblt64"
      style="--justifyContent-mobile__iuzg8946: center;"
    >
      <button
        class="Button_button__1bzq74l0"
        value="OK"
      >
        OK
      </button>
    </div>
  </div>
</div>
`;
